[NINC-516][NINC-2267] Fixed expenses tab css on mobile
* [NINC-516][NINC-2267] Fixed expenses tab css on mobile

* CRFIXES

--- a/src/app/pages/contracts/contract-item/expense-tab/expense-tab.component.scss
+++ b/src/app/pages/contracts/contract-item/expense-tab/expense-tab.component.scss
@@ -7,5 +7,8 @@
     width: 100%;
     margin-left: 0;
     align-items: center;
+    cursor: pointer;
+    display: flex;
+    padding: 0;
   }
 }
